@@ -41,6 +41,8 @@ public:
     UPDATE_ELEMENT(ID_ZOOM_FITSCREENWIDTH,   UPDUI_MENUPOPUP | UPDUI_TOOLBAR)
     UPDATE_ELEMENT(ID_ZOOM_FITSCREENHEIGHT,  UPDUI_MENUPOPUP | UPDUI_TOOLBAR)
     UPDATE_ELEMENT(ID_ZOOM_FITPAGE,          UPDUI_MENUPOPUP | UPDUI_TOOLBAR)
+
+    UPDATE_ELEMENT(ID_FULLSCREEN,            UPDUI_MENUPOPUP | UPDUI_TOOLBAR)
   END_UPDATE_UI_MAP()
 
   static UINT const WM_ICON_NOTIFICATION = WM_APP+100;
@@ -191,6 +193,7 @@ private:
   int m_curClientWidth;
   CString m_initDir;
   CString m_cmdLine;
+  DWORD m_1stClick;
 
   CAppInfoBase m_appInfo;
   
